Quorum3/Library/Tests/Templating/Pass/GenericParentC.quorum
class GenericParentC<Type>
    action TestC(Type t)
    end
end