Quorum3/Library/Tests/Templating/Fail/A_11.quorum
class A<Type>
    Type something = undefined

    action setSomething(Type t)
        something = t
    end
end